# hermes-harness

./: .dockerignore  .gitignore  Dockerfile.hermes  README.md  docker-compose.bridge.yml  docker-compose.hermes.yml  docker-compose.local.yml  docker-compose.viewer.yml  hermes-a2a.lock.json  hermes-agent.lock.json  install.sh  package-lock.json  package.json  pyproject.toml
archive/: README.md
archive/legacy-2026-05-09/: .gitignore  Dockerfile.hermes  docker-compose.hermes.yml  docker-compose.viewer.yml
bridge/: README.md
bridge/src/: a2a_client.js  cancel.js  daemon.js  db.js  dispatch.js  fs_contract.js  hmac.js  index.js  push.js  secrets.js
bridge/test/: bridge_flow.test.js  hmac.test.js  secrets.test.js
bus_template/: PRIORITIZE.md  README.md
docker/local-vm/: Dockerfile
docs/: Assignments.md  CONFIG.md  Dashboard.md  OrgGraph.md  README.md  boss-team-contract.md  domain-brief.md  e2b-remote-runtime-implementation-plan.md  hermes-harness-a2a-e2b-plugin-spec.md  index.md  jesuscord-pre-launch-marketing.md  resource-registry.md  root-team-config-organization.md  specialized-worker-agent-template.md
docs/cards/: card-guide.md  operator-pulse-prompt.md
docs/practical/: 02-durable-delegation-design.md  07-hermes-harness-plugin-plan.md  24-7-todo.md
docs/team/: 01_install.sh  03_top_tier_souls.md  04_specialist_souls.md  05_team_souls.md  06_protocol.md  07_wiki_setup.sh  HARD_RULES.md  README.md  (+1 more)
harness/: __init__.py  boss_team.py  db.py  factory.py  models.py
harness_remote/: a2a_server.py  push_client.py
hermes_harness/: __init__.py  __main__.py  cli.py  mock_x_api.py
plans/: hermes-first-reset.md  remote-kanban-teams.md
schema/: sqlite.sql
scripts/: activate_24_7_root_team.sh  bootstrap_hermes_agent.sh  docker_boss_entrypoint.sh  install_hermes_a2a.sh  install_native_systemd.sh  run_24h_soak.sh  run_boss_team_intelligence_test.sh  verify.sh
tests/: conftest.py  test_boss_team.py  test_bridge.py  test_doctor.py  test_harness_scaffold.py  test_harness_tools.py  test_hermes_a2a_server.py  test_mock_remote_kanban.py  test_remote_runtime.py  test_remote_team_hub_transport.py  test_remote_team_poller.py  test_remote_team_quality.py  test_user_peer_onboarding.py  test_viewer.py
(+184 files in other folders)
