[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-harness-reset"
version = "0.1.0"
description = "Hermes-first reset of Hermes Harness."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
hermes-harness = "hermes_harness.cli:main"

[tool.setuptools.packages.find]
include = ["hermes_harness*"]
exclude = ["archive*", "docker*", "plans*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
