[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-harness-reset"
version = "0.1.0"
description = "Hermes-first reset of Hermes Harness."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
hermes-harness = "hermes_harness.cli:main"
hermes-harness-remote-team = "hermes_harness.remote_team.cli:main"
hermes-harness-mock-x = "hermes_harness.mock_x_api:main"
hermes-harness-x-api = "hermes_harness.mock_x_api:main"

[tool.setuptools.packages.find]
include = ["hermes_harness*"]
exclude = ["archive*", "docker*", "plans*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires Docker and the Hermes local VM image",
  "smoke: requires live model/API access and may be slow or nondeterministic",
]
